<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wine Notes</string>
    <string name="fatal_sdcard_required">Oh snap. SD card is not available
        or not writable, and this app cannot work properly like that.
        This may be improved in an upcoming version.
    </string>
    
    <string name="title_winelist">Wines</string>
    <string name="title_edit_wine">Edit wine</string>
    <string name="title_delete_wine">Delete wine</string>
    <string name="title_delete_photo">Delete photo</string>
    <string name="title_delete_file">Delete file</string>
    <string name="title_select_backupfile">Select backup file</string>
    <string name="title_wine">Wine</string>
    <string name="title_noname_wine">Wine</string>
    <string name="title_wine_details">Wine</string>
    <string name="title_file_selector">File Selector</string>
    <string name="title_edit_grapes">Grape / Cépage</string>
    <string name="title_edit_aroma">Aroma Impressions</string>
    <string name="title_edit_taste">Taste Impressions</string>
    <string name="title_edit_aftertaste">Aftertaste Impressions</string>

    <string name="hint_name">Name of the wine</string>
    <string name="hint_region">Region / appellation</string>
    <string name="hint_grape">Merlot, Grenache, &#8230;</string>
    <string name="hint_impressions">Fruity, Sweet, &#8230;</string>
    <string name="note_entering_impressions">Hint: you can add many at once,
        separated by commas. Long-tap to delete an item.
    </string>
    <string name="msg_no_impressions">Use the input box above to add your "impressions".
        Common qualifiers are built-in, autocompletion helps you enter them easily.
        New terms that you enter are automatically added to the autocompletion list.</string>
    <string name="msg_no_grapes">Use the input box above to add grape names.
        Common names are built-in, autocompletion helps you enter them easily.
        New names that you enter are automatically added to the autocompletion list.</string>
    <string name="label_memo">Memo</string>
    <string name="hint_memo">Enter your notes, if any…</string>
    <string name="msg_updated_wine">Updated wine</string>
    <string name="msg_created_wine">Added wine</string>
    <string name="error_update_wine">Could not update wine</string>
    <string name="confirm_are_you_sure">Are you sure?</string>
    <string name="msg_quit">Are you sure you want to quit?</string>
    <string name="msg_no_matching_files">No matching files</string>
    <string name="btn_add_wine">Add wine</string>
    <string name="btn_edit_wine">Edit wine</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_add_impressions">Add impressions</string>
    <string name="btn_edit_impressions">Edit impressions</string>
    <string name="btn_add_photos">Add photos</string>
    <string name="btn_edit_photos">Edit photos</string>
    <string name="btn_save_wine">Save changes</string>
    <string name="btn_add_photo">Take a photo</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_add">Add</string>
    <string name="btn_ok">OK</string>
    <string name="btn_done">Done</string>
    <string name="label_impressions">Impressions:</string>
    <string name="label_none">(none)</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_quit">Quit</string>
    <string name="msg_wine_deleted">Deleted wine</string>
    <string name="msg_backup_created">Created backup</string>
    <string name="error_backup_failed">Backup failed</string>
    <string name="error_backup_exception">Backup failed unexpectedly</string>
    <string name="title_confirm_restore">Restore database</string>
    <string name="confirm_restore">The database will be replaced with the selected file.
        Make sure you took a backup of the current database before doing this.
        Are you sure to go ahead?
    </string>
    <string name="msg_restore_success">Restored database</string>
    <string name="error_restore_failed">Restore failed</string>
    <string name="error_restore_exception">Restore failed unexpectedly</string>
    <string name="bullet_wine">[wine]</string>
    <string name="title_unexpected_error">Unexpected Error</string>
    <string name="error_allocating_photo_file">There was an error
        when trying to allocate a file to store the photo.
        We don\'t know how this is possible.
        Unfortunately you cannot take photos :(
    </string>
    <string name="prompt_year">Year / Millésime</string>
    <string name="prompt_wine_type">Type of wine</string>
    <string name="prompt_flag">Flag?</string>
    <string name="prompt_currency">Currency</string>

    <string name="label_grapes">Grape / Cépage</string>
    <string name="label_region">Region / Appellation</string>
    <string name="label_price">Price</string>
    <string name="label_aroma">Aroma</string>
    <string name="label_taste">Taste</string>
    <string name="label_aftertaste">Aftertaste</string>
    <string name="label_overall">Overall</string>

    <string name="alt_add">[add]</string>
    <string name="alt_edit">[edit]</string>
    <string name="alt_save">[save]</string>
    <string name="alt_delete">[delete]</string>
    <string name="alt_done">[done]</string>

    <string name="default_currency">USD</string>
    <string name="dialog_title_default_currency">Default currency</string>
    <string name="key_default_currency">currency</string>
    <string name="summary_default_currency">Default currency</string>
    <string name="title_default_currency">Default currency</string>

</resources>
