<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="0dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="0dp" >

        <Button
            android:id="@+id/btn_done"
            style="@style/customButton"
            android:layout_alignParentRight="true"
            android:text="@string/btn_done" />

        <Button
            android:id="@+id/btn_add"
            style="@style/customButton"
            android:layout_toLeftOf="@id/btn_done"
            android:text="@string/btn_add" />

        <MultiAutoCompleteTextView
            android:id="@+id/input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/btn_add"
            android:ellipsize="end"
            android:hint="@string/hint_impressions"
            android:singleLine="true" />
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="0dp"
        android:text="@string/note_entering_impressions"
        android:textSize="11sp" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:drawSelectorOnTop="false" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="15dp"
        android:text="@string/msg_no_impressions"
        android:textSize="18sp" />

</LinearLayout>